@@ -1,6 +1,8 @@
 git HEAD
 
-    * Fix spaces in stop names with fuzzy => 1
+    * Remove fuzzy matching from constructor / ->results API. Use
+      the new get_stop_by_name function instead (returns all matching stop).
+      Update aseag-m accordingly
 
 Travel::Status::DE::URA 0.01 - Sun Dec 22 2013
 
